<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:id="@+id/fragment_account"
    tools:context="com.example.eileen.smartstorage.account">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/accountbanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/account5"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/tName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tName"
        android:textSize="25sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/lighterblack"
        android:layout_below="@+id/accountbanner"/>
    <TextView
        android:id="@+id/tStudentId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tStudentId"
        android:textSize="25sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/lighterblack"
        android:layout_below="@+id/tName"/>

    <TextView
        android:id="@+id/tPillarYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level"
        android:textSize="25sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/lighterblack"
        android:layout_below="@+id/tStudentId"/>

    <TextView
        android:id="@+id/tUpBooking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upBooking"
        android:textSize="25sp"
        android:textColor="@color/lighterblack"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/tPillarYear"/>

    <TextView
        android:id="@+id/displaybooking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nobooking"
        android:textStyle="italic"
        android:textSize="20sp"
        android:textColor="@android:color/holo_red_dark"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_below="@id/tUpBooking"/>

    <Button
        android:id="@+id/btnHistory"
        android:layout_width="190dp"
        android:layout_height="55dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:text="@string/btnHistory"
        android:textSize="15sp"
        android:layout_below="@id/displaybooking"/>
    <Button
        android:id="@+id/btnReturnTools"
        android:layout_width="190dp"
        android:layout_height="55dp"
        android:text="@string/btnReturn"
        android:textSize="15sp"
        android:layout_below="@+id/displaybooking"
        android:layout_toRightOf="@id/btnHistory"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        />

    <Button
        android:id="@+id/btnBooking"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/tMakeBooking"
        android:textSize="15sp"
        android:layout_below="@id/btnHistory"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2.5dp"
        android:layout_marginRight="10dp"/>
    <TextView
        android:id="@+id/tReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnBooking"
        android:text="If you noticed that there is any missing or faulty item please make a report below."
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/btnReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tReport"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="Make A Report"
        android:textSize="15sp"/>

</RelativeLayout>
